Closed Bug 1776825 Opened 2 years ago Closed 2 years ago

[mips64el] Failed to build JS on mips64el platform (use of undeclared identifier 'PoppedFPJitEntry'/'STUB_FRAME_SIZE')

Categories

(Core :: JavaScript Engine: JIT, defect, P5)

Other
Linux
defect

Tracking

()

RESOLVED FIXED
104 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox-esr102 --- unaffected
firefox103 --- wontfix
firefox104 --- fixed

People

(Reporter: glandium, Assigned: liuyu)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(1 file)

mips64el has the same regression and was not fixed in bug 1774145

+++ This bug was initially created as a clone of Bug #1774145 +++

Failed to build JS on loongarch64 platform due to two undeclared identifier: PoppedFPJitEntry and STUB_FRAME_SIZE, and those two errors are introduced in bug 1772987 and bug 1773480, which shoud be ported to loongarch64 platform.

(In reply to Mike Hommey [:glandium] from comment #0)

mips64el has the same regression and was not fixed in bug 1774145

+++ This bug was initially created as a clone of Bug #1774145 +++

Failed to build JS on loongarch64 platform due to two undeclared identifier: PoppedFPJitEntry and STUB_FRAME_SIZE, and those two errors are introduced in bug 1772987 and bug 1773480, which shoud be ported to loongarch64 platform.

Hi, thanks for your information, we will fix it soon.

And do you mind change the loong64/loongarch64 in description to mips64? Since they are two different platforms. And this bug should block bug 1639895 instead. Thanks!

Blocks: 1639895
No longer blocks: 1757272
Summary: [loong64] Failed to build JS on loongarch64 platform (use of undeclared identifier 'PoppedFPJitEntry'/'STUB_FRAME_SIZE') → [mips64el] Failed to build JS on loongarch64 platform (use of undeclared identifier 'PoppedFPJitEntry'/'STUB_FRAME_SIZE')
Summary: [mips64el] Failed to build JS on loongarch64 platform (use of undeclared identifier 'PoppedFPJitEntry'/'STUB_FRAME_SIZE') → [mips64el] Failed to build JS on mips64el platform (use of undeclared identifier 'PoppedFPJitEntry'/'STUB_FRAME_SIZE')
Severity: -- → S4
Priority: -- → P5
Assignee: nobody → liuyu
Status: NEW → ASSIGNED
Attachment #9286592 - Attachment description: WIP: Bug 1776825 - [mips64]Fix undeclared identifier 'PoppedFPJitEntry'/'STUB_FRAME_SIZE' → Bug 1776825 - [mips64]Fix undeclared identifier 'PoppedFPJitEntry'/'STUB_FRAME_SIZE'
Attachment #9286592 - Attachment description: Bug 1776825 - [mips64]Fix undeclared identifier 'PoppedFPJitEntry'/'STUB_FRAME_SIZE' → Bug 1776825 - [mips64]Fix undeclared identifier 'PoppedFPJitEntry'/'STUB_FRAME_SIZE'. r=jandem
Pushed by jdemooij@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/432bb5f2d371
[mips64]Fix undeclared identifier 'PoppedFPJitEntry'/'STUB_FRAME_SIZE'. r=jandem
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 104 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: