Bug 1776825 - [mips64]Fix undeclared identifier 'PoppedFPJitEntry'/'STUB_FRAME_SIZE'. r=jandem

Port D148487,D148779 and bug1772506 to mips64

Differential Revision: https://phabricator.services.mozilla.com/D152492