js/src/jit/mips64/Simulator-mips64.cpp
@@ -1964,6 +1964,8 @@ typedef int32_t (*Prototype_Int32_GeneralInt32Int32Int32Int32)(int64_t, int32_t,
                                                                int32_t);
 typedef int32_t (*Prototype_Int32_GeneralInt32Int32Int32Int32Int32)(
     int64_t, int32_t, int32_t, int32_t, int32_t, int32_t);
+typedef int32_t (*Prototype_Int32_GeneralInt32Int32Int32Int32General)(
+    int64_t, int32_t, int32_t, int32_t, int32_t, int64_t);
 typedef int32_t (*Prototype_Int32_GeneralInt32Int32Int32General)(
     int64_t, int32_t, int32_t, int32_t, int64_t);
 typedef int32_t (*Prototype_Int32_GeneralInt32Int32Int64)(int64_t, int32_t,
@@ -2299,6 +2301,13 @@ void Simulator::softwareInterrupt(SimInstruction* instr) {
             reinterpret_cast<Prototype_Int32_GeneralInt32Int32Int32Int32Int32>(
                 nativeFn)(arg0, I32(arg1), I32(arg2), I32(arg3), I32(arg4),
                           I32(arg5));
+        setRegister(v0, I64(ret));
+        break;
+      }
+      case Args_Int32_GeneralInt32Int32Int32Int32General: {
+        int32_t ret = reinterpret_cast<
+            Prototype_Int32_GeneralInt32Int32Int32Int32General>(nativeFn)(
+            arg0, I32(arg1), I32(arg2), I32(arg3), I32(arg4), arg5);
         setRegister(v0, I64(ret));
         break;
       }
